# Museum_Of_Flower

./: CNAME  README.md  pyproject.toml  requirements.txt
app/: crud.py  main.py  models.py  schemas.py
backend/: database.py  main.py
backend/api/: basket.py  ticket.py
backend/crud/: basket.py  ticket.py
backend/models/: __init__.py  basket.py  ticket.py
backend/schemas/: __init__.py  basket.py  ticket.py
starter/: about.html  app.css  home.html  tickets.html
