[tool.poetry]
name = "museumofflower"
version = "0.1.0"
description = ""
authors = ["dbkhanh <db2.khanh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
